--- a/web.html
+++ b/web.html
@@ -11,7 +11,7 @@
             Hola queridos estudiantes bienvenidos a este gran proyecto
         </h1>
         <h2>
-            Les recuerdo tomar el curso de git y github
+            Les recuerdo tomar el curso de git y github que está chingonsisimo
         </h2>
         <h3>Otro cambiecito</h3>
     </div>
